# electronic

./: .env.sample  pyproject.toml
config/: settings.py  urls.py
providers/: admin.py  models.py  permissions.py  serializers.py  views.py
providers/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
